--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ant-design/pro-layout": "4.11.0-1",
     "@antv/data-set": "^0.10.2",
     "antd": "^4.0.0-rc.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.16",
     "lodash": "^4.17.11",
@@ -64,6 +65,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "redux": "^4.0.1",
+    "shortid": "^2.2.15",
     "umi": "^2.13.0",
     "umi-plugin-antd-icon-config": "^1.0.2",
     "umi-plugin-antd-theme": "^1.0.1",
